# alzheimers-risk-assessment

./: .dockerignore  .gitignore  Dockerfile  README.md  crew_agents.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  risk_calculator.py  run_app.bat  run_app.sh  setup.py  vercel.json
.github/workflows/: update-readme-date.yml
api/: app.py
api/templates/: admin_assessments.html  assessment.html  base.html  index.html  results.html
